Prevent centering expertise/about on tablet

--- a/less/spartan.less
+++ b/less/spartan.less
@@ -308,7 +308,7 @@ h4 {
     }
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   #_expertise {
     > .row-fluid {
       > .span3 {
@@ -344,7 +344,7 @@ h4 {
     }
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   #_about {
     > .row-fluid {
       .span9 {
